Service Item created

--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,10 @@
     <style>
       @font-face{
         font-family: Gumela;
-        src: url('../src/fonts/*');
+        src: url('../src/fonts/Gumela\ Regular.otf');
       }
       *{
-        font-family: 'gumela';
+        font-family: 'Gumela';
         font-weight: normal;
         font-size: 20px;
       }
