--- a/public/index.html
+++ b/public/index.html
@@ -8,22 +8,6 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <style>
-      @font-face{
-        font-family: Gumela;
-        src: url('../src/fonts/Gumela\ Regular.otf');
-      }
-      *{
-        font-family: 'Gumela';
-        font-weight: normal;
-        font-size: 20px;
-      }
-      body{
-        margin: 0;
-        padding: 0;
-      }
-    </style>
-   
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -37,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>My Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
